--- a/src/app/shared/component/product-card/product-card.component.scss
+++ b/src/app/shared/component/product-card/product-card.component.scss
@@ -1,8 +1,32 @@
-.cellphones-color-price{
-  color: #e0052b;
-  font-size:15px
+.cellphones-color-price {
+  color: var(--cellphones-color);
+  font-size: 15px;
 }
 
 :host ::ng-deep .anticon.anticon-star {
   font-size: 14px !important;
+}
+
+.card {
+  height: fit-content;
+  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+
+  .card-footer {
+    display: none;
+  }
+
+  &:hover {
+    .card-footer {
+      display: grid;
+    }
+  }
+}
+
+:host ::ng-deep .ant-card-body {
+  padding: 16px 16px !important ;
+}
+
+:host ::ng-deep .ant-card-cover img {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
 }
