feature/block-product-component

--- a/src/app/main/modules/home/home.component.html
+++ b/src/app/main/modules/home/home.component.html
@@ -19,3 +19,6 @@
     <img class="h-20 object-contain" [src]="item.logo">
   </div>
 </div>
+<div class="mt-2">
+  <app-block-products></app-block-products>
+</div>
