--- a/src/app/admin/modules/product/product-edit/product-edit.component.html
+++ b/src/app/admin/modules/product/product-edit/product-edit.component.html
@@ -12,7 +12,7 @@
 
       <div class="col-span-1 p-2">
         <label class="font-semibold">Description: *</label>
-        <input nz-input type="text" placeholder="Nhập mô tả" formControlName="description">
+        <ckeditor name="myckeditor" debounce="300" [editor]="configurationEditor" formControlName="description"></ckeditor>
       </div>
 
 
