--- a/src/app/admin/modules/product/product-edit/product-edit.component.html
+++ b/src/app/admin/modules/product/product-edit/product-edit.component.html
@@ -1,143 +1,198 @@
-<div class="pt-4">
-  <h4 class="flex justify-center text-base font-bold mb-2">Thông tin sản phẩm</h4>
-  <form [formGroup]="createProductForm" (keydown.enter)="$event.preventDefault()">
-    <div class="grid grid-cols-2">
+<nz-spin [nzSpinning]="isSpinning">
+  <div class="pt-4">
+    <h4 class="flex justify-center text-base font-bold mb-4">Thông tin sản phẩm</h4>
+    <form nz-form [formGroup]="createProductForm" (keydown.enter)="$event.preventDefault()">
+      <div nz-row [nzGutter]="16">
+
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="name">Name</nz-form-label>
+            <nz-form-control [nzSpan]="21" [nzErrorTip]="userErrorTpl">
+              <input nz-input formControlName="name" id="name" />
+              <ng-template #userErrorTpl let-control>
+                <ng-container *ngIf="control.hasError('required')">Please input your name!</ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Name: *</label>
-        <input nz-input type="text" placeholder="Nhập tên sản phẩm" formControlName="name">
-      </div>
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="description">Description</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid description!">
+              <ckeditor name="myckeditor" debounce="300" [editor]="configurationEditor" formControlName="description">
+              </ckeditor>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Description: *</label>
-        <ckeditor name="myckeditor" debounce="300" [editor]="configurationEditor" formControlName="description"></ckeditor>
-      </div>
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="status">Tình trạng</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid status!">
+              <input nz-input formControlName="status" id="status" />
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Tình trạng: *</label>
-        <input nz-input type="text" placeholder="Nhập tình trạng sản phẩm" formControlName="status">
-      </div>
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="originalPrice">Giá gốc</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid originalPrice!">
+              <input type="number" nz-input formControlName="originalPrice" id="originalPrice" />
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Giá gốc: *</label>
-        <input nz-input type="number" placeholder="Nhập giá gốc" formControlName="originalPrice">
-      </div>
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="availableStatus">Trạng thái</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid availableStatus!">
+              <nz-select class="block w-full" formControlName="availableStatus">
+                <nz-option *ngFor="let item of availableStatus" [nzValue]="item.value" [nzLabel]="item.status">
+                </nz-option>
+              </nz-select>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Trạng thái: *</label>
-        <nz-select class="block w-full" formControlName="availableStatus">
-          <nz-option *ngFor="let item of availableStatus" [nzValue]="item.value" [nzLabel]="item.status"></nz-option>
-        </nz-select>
-      </div>
+
+        <div nz-col class="gutter-row" [nzSpan]="12" *ngIf="supplierList$ | async as supplierList">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="supplierId">Nhà cung cấp</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid availableStatus!">
+              <nz-select class="block w-full" formControlName="supplierId">
+                <nz-option *ngFor="let item of supplierList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
+              </nz-select>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-
-      <div class="col-span-1 p-2" *ngIf="supplierList$ | async as supplierList">
-        <label class="font-semibold">Nhà cung cấp: *</label>
-        <nz-select class="block w-full" formControlName="supplierId">
-          <nz-option *ngFor="let item of supplierList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
-        </nz-select>
-      </div>
-
-
-      <div class="col-span-1 p-2" *ngIf="productTypeList$ | async as productTypeList">
-        <label class="font-semibold">Loại sản phẩm: *</label>
-        <nz-select class="block w-full" formControlName="productTypeId">
-          <nz-option *ngFor="let item of productTypeList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
-        </nz-select>
-      </div>
+        <div nz-col class="gutter-row" [nzSpan]="12" *ngIf="productTypeList$ | async as productTypeList">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="productTypeId">Loại sản phẩm</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid productTypeId!">
+              <nz-select class="block w-full" formControlName="productTypeId">
+                <nz-option *ngFor="let item of productTypeList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
+              </nz-select>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
 
 
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Đặc điểm nổi bật: *</label>
-        <input nz-input type="text" placeholder="Nhập đặc điểm nổi bật và nhấn enter " [formControl]=specialOnEnter
-          (keyup.enter)="onAddSpecialFeatures($event)" class="mb-1">
-        <ng-container *ngFor="let item of createProductForm.get('specialFeatures')!.value; let j = index;">
-          <div nz-row>
-            <div nz-col nzSpan="23">
-              <span nz-typography><code>{{item}}</code></span>
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4" nzRequired nzFor="specialOnEnter">Đặc điểm nổi bật</nz-form-label>
+            <nz-form-control [nzSpan]="21" nzErrorTip="The input is not valid specialOnEnter!">
+              <input nz-input formControlName="specialOnEnter" id="specialOnEnter"
+                (keyup.enter)="onAddSpecialFeatures($event)" class="mb-1" />
+              <ng-container *ngFor="let item of createProductForm.get('specialFeatures')!.value; let j = index;">
+                <div nz-row>
+                  <div nz-col nzSpan="23">
+                    <span nz-typography><code>{{item}}</code></span>
+                  </div>
+                  <div nz-col nzSpan="1" class="mr-0">
+                    <i nz-icon nzType="delete" class="mr-2 cursor-pointer text-xl text-red-500"
+                      (click)="onDeleteSpecialFeatures(j)"></i>
+                  </div>
+                </div>
+              </ng-container>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+
+
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4">Configuration</nz-form-label>
+            <nz-form-control [nzSpan]="21">
+              <nz-card [nzExtra]="extraTemplate">
+                <ng-container *ngFor="let item of configuration?.controls;let i = index;">
+                  <div nz-card-grid style="width: 50%; text-align:center"
+                    *ngIf="item.value.key && item.value.description">
+                    <label class="mt-auto" style="margin-right:5px; color:blue; "> {{item.value.key}}: </label>
+                    <div>
+                      <label class="mt-auto"> {{item.value.description}}</label>
+                    </div>
+                  </div>
+                </ng-container>
+              </nz-card>
+            </nz-form-control>
+          </nz-form-item>
+          <ng-template #extraTemplate>
+            <div nz-row [nzGutter]="16">
+              <div nz-col class="gutter-row" [nzSpan]="12">
+                <input type="file"
+                  accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
+                  (change)="onFileChange($event)" multiple="false" />
+              </div>
+              <div nz-col class="gutter-row" [nzSpan]="12">
+                <a href="assets/excel/template_configuration.xlsx" nz-button nzType="primary" [nzSize]="size"
+                  nzShape="round">
+                  <i nz-icon nzType="download"></i>
+                  Download file mẫu
+                </a>
+              </div>
             </div>
-            <div nz-col nzSpan="1" class="mr-0">
-              <i nz-icon nzType="delete" class="mr-2 cursor-pointer text-xl text-red-500"
-                (click)="onDeleteSpecialFeatures(j)"></i>
+          </ng-template>
+        </div>
+
+
+        <div nz-col class="gutter-row" [nzSpan]="12">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="4">Categories</nz-form-label>
+            <nz-form-control [nzSpan]="21">
+              <div formArrayName="categories" *ngFor="let item of categories?.controls; let i = index;"
+            class="border-2 border-gray-100 mb-1" trackBy:trackByFn>
+            <div [formGroupName]="i" nz-row>
+              <div nz-col nzSpan="23">
+                <nz-avatar class="mt-2 flex ml-auto mr-auto w-32 h-32" nzIcon="user" nzShape="square"
+                  [nzSrc]="item.value.previewImgSrc ? item.value.previewImgSrc : item.value.image"></nz-avatar>
+                <div class="mt-2 flex justify-center">
+                  <input type="file" id="file" (change)="handleFileInput($event,i)">
+                </div>
+                <div class="mt-4 ml-6 mb-6">
+                  <div class="mb-2">
+                    <label class="text-base" for="name">Tên category:</label>
+                    <input nz-input type="text" formControlName="name">
+                  </div>
+                  <div class="mb-2">
+                    <label class="text-base" for="code">Giá:</label>
+                    <input nz-input type="number" formControlName="price">
+                  </div>
+                </div>
+              </div>
+              <div nz-col nzSpan="1">
+                <i nz-icon nzType="delete" class="mr-2 cursor-pointer text-xl text-red-500"
+                  (click)="deleteCategories(i)"></i>
+              </div>
             </div>
           </div>
-        </ng-container>
-      </div>
-
-
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Thêm configuration: *</label>
-        <nz-card nzTitle="Import file configuration " [nzExtra]="extraTemplate">
-          <ng-container *ngFor="let item of configuration?.controls;let i = index;">
-            <div nz-card-grid style="width: 50%; text-align:center" *ngIf="item.value.key && item.value.description">
-              <label class="mt-auto" style="margin-right:5px; color:blue; "> {{item.value.key}}: </label>
-              <div>
-                <label class="mt-auto"> {{item.value.description}}</label>
-              </div>
-            </div>
-          </ng-container>
-        </nz-card>
-        <ng-template #extraTemplate>
-          <input type="file"
-            accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
-            (change)="onFileChange($event)" multiple="false" />
-        </ng-template>
-      </div>
-
-
-
-      <div class="col-span-1 p-2">
-        <label class="font-semibold">Thêm categories: *</label>
-        <div formArrayName="categories" *ngFor="let item of categories?.controls; let i = index;"
-          class="border-2 border-gray-100 mb-1" trackBy:trackByFn>
-          <div [formGroupName]="i" nz-row>
-            <div nz-col nzSpan="23">
-              <nz-avatar class="mt-2 flex ml-auto mr-auto w-32 h-32" nzIcon="user" nzShape="square"
-                [nzSrc]="item.value.previewImgSrc ? item.value.previewImgSrc : item.value.image"></nz-avatar>
-              <div class="mt-2 flex justify-center">
-                <input type="file" id="file" (change)="handleFileInput($event,i)">
-              </div>
-              <div class="mt-4 ml-6 mb-6">
-                <div class="mb-2">
-                  <label class="text-base" for="name">Tên category:</label>
-                  <input nz-input type="text" formControlName="name">
-                </div>
-                <div class="mb-2">
-                  <label class="text-base" for="code">Giá:</label>
-                  <input nz-input type="number" formControlName="price">
-                </div>
-              </div>
-            </div>
-            <div nz-col nzSpan="1">
-              <i nz-icon nzType="delete" class="mr-2 cursor-pointer text-xl text-red-500"
-                (click)="deleteCategories(i)"></i>
-            </div>
+          <div class="flex justify-center">
+            <button nz-button nzDanger class="flex items-center p-2 rounded-lg" (click)="addCategories()">
+              <i nz-icon nzType="plus" nzTheme="outline"></i>
+            </button>
           </div>
+            </nz-form-control>
+          </nz-form-item>
+
+
         </div>
-        <div class="flex justify-center">
-          <button nz-button nzDanger class="flex items-center p-2 rounded-lg" (click)="addCategories()">
-            <i nz-icon nzType="plus" nzTheme="outline"></i>
-          </button>
-        </div>
+
+
       </div>
-
-
+    </form>
+    <div class="flex justify-center">
+      <button nz-button (click)="closeEdit()">Huỷ</button>
+      <button class="ml-2 bg-red-500 text-white p-1 flex justify-center items-center hover:bg-red-600"
+        (click)="submit()">Lưu thông tin</button>
     </div>
-  </form>
-  <div class="flex justify-center">
-    <button nz-button (click)="closeEdit()">Huỷ</button>
-    <button class="ml-2 bg-red-500 text-white p-1 flex justify-center items-center hover:bg-red-600"
-      (click)="submit()">Lưu thông tin</button>
   </div>
-</div>
+</nz-spin>
 
-
-<!--
-
-      categories: [[], Validators.required], -->
