--- a/src/app/admin/modules/product/product-list/product.component.html
+++ b/src/app/admin/modules/product/product-list/product.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="flex items-center mt-2">
-  <button nz-button nzDanger class="flex items-center p-2 rounded-lg" routerLink="edit">
+  <button nz-button nzDanger class="flex items-center p-2 rounded-lg" routerLink="create">
     <i nz-icon nzType="plus" nzTheme="outline"></i>Thêm sản phẩm
   </button>
 </div>
