--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -127,6 +127,9 @@
           <i nz-icon nzType="setting" nzTheme="outline" class="mr-2"></i>Quản
           trị
         </li>
+        <li nz-menu-item (click)="updatePassword()">
+          <i nz-icon nzType="lock" nzTheme="outline" class="mr-2"></i>Cập nhật mật khẩu
+        </li>
         <li nz-menu-item (click)="logout()">
           <i nz-icon nzType="logout" nzTheme="outline" class="mr-2"></i>Logout
         </li>
