bugfix/update-routing-order-tracking

--- a/src/app/main/modules/order-tracking/components/order-tracking-info/order-tracking-info.component.html
+++ b/src/app/main/modules/order-tracking/components/order-tracking-info/order-tracking-info.component.html
@@ -77,5 +77,5 @@
       <tr class="h-3"></tr>
     </tfoot>
   </table>
-  <button class="mt-4 p-2 w-64 bg-red-600 text-white rounded-md" routerLink="timeline">Theo dõi đơn hàng</button>
+  <button class="mt-4 p-2 w-64 bg-red-600 text-white rounded-md" (click)="goTimelinePage()">Theo dõi đơn hàng</button>
 </div>
