--- a/src/app/admin/modules/product/product-list/product.component.html
+++ b/src/app/admin/modules/product/product-list/product.component.html
@@ -14,17 +14,11 @@
   <nz-input-group nzSize="small" class="mr-auto w-1/3 rounded-md input-group" [nzSuffix]="suffixIconSearch">
     <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" [formControl]=searchNameForm/>
   </nz-input-group>
-  <h6>Loại sản phẩm </h6>
-  <nz-select ngModel="lucy" class="m-1">
-    <nz-option nzValue="jack" nzLabel="Jack"></nz-option>
-    <nz-option nzValue="lucy" nzLabel="Lucy"></nz-option>
-    <nz-option nzValue="disabled" nzLabel="Disabled"></nz-option>
+  <nz-select nzAllowClear [formControl]="productType" class="mx-4" nzPlaceHolder="Loại sản phẩm">
+    <nz-option *ngFor="let item of productTypeList$ | async" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
   </nz-select>
-  <h6>Hãng sản xuất </h6>
-  <nz-select ngModel="lucy" class="m-1">
-    <nz-option nzValue="jack" nzLabel="Jack"></nz-option>
-    <nz-option nzValue="lucy" nzLabel="Lucy"></nz-option>
-    <nz-option nzValue="disabled" nzLabel="Disabled"></nz-option>
+  <nz-select nzAllowClear [formControl]="supplier" nzPlaceHolder="Hãng sản xuất">
+    <nz-option *ngFor="let item of supplierList$ | async" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
   </nz-select>
 </div>
 <ng-template #suffixIconSearch>
@@ -34,24 +28,13 @@
 <ng-container *ngIf="productPaging$ | async as productPaging">
   <div class="grid grid-cols-6 gap-4">
     <div *ngFor="let item of productPaging.items" class="py-2 col-span-1">
-      <app-product-card [product]="item" (onClickLeftButton)="editProduct(item)" (onClickRightButton)="deleteProduct(item)" [leftButtonTitle] = "leftButtonTitle" [rightButtonTitle] = "rightButtonTitle"
+      <app-product-card [isShowFooter]="true" [product]="item" (onClickLeftButton)="editProduct(item)" (onClickRightButton)="deleteProduct(item)" [leftButtonTitle] = "leftButtonTitle" [rightButtonTitle] = "rightButtonTitle"
        class="w-fit"></app-product-card>
     </div>
   </div>
 
   <nz-pagination class="mt-8 flex justify-center" [nzPageIndex]="productPaging.pageIndex"
-    [nzTotal]="productPaging.totalCount" [nzPageSize]="productPaging.pageSize" [nzItemRender]="renderItemTemplate"
+    [nzTotal]="productPaging.totalCount" [nzPageSize]="productPaging.pageSize"
     (nzPageIndexChange)="onPageIndexChange($event)">
   </nz-pagination>
 </ng-container>
-
-<ng-template #renderItemTemplate let-type let-page="page">
-  <ng-container [ngSwitch]="type">
-    <a *ngSwitchCase="'page'">{{ page }}</a>
-    <a *ngSwitchCase="'prev'">Previous</a>
-    <a *ngSwitchCase="'next'">Next</a>
-    <a *ngSwitchCase="'prev_5'">
-      << </a>
-        <a *ngSwitchCase="'next_5'">>></a>
-  </ng-container>
-</ng-template>
