--- a/src/app/main/modules/product-detail/product-detail.component.html
+++ b/src/app/main/modules/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
-<div class="my-2">
+<div class="my-2" *ngIf="productDetail$ | async as productDetail">
   <div class="mb-2 flex items-center">
     <h2 class="text-xl font-semibold">
-      Tai nghe Bluetooth Samsung Galaxy Buds Live
+      {{productDetail.name}}
     </h2>
     <span class="ml-3 mb-1"><nz-rate disabled [ngModel]="5"></nz-rate></span>
     <span class="ml-3 text-sm">12 đánh giá</span>
@@ -10,8 +10,8 @@
     <div class="col-span-1">
       <div class="p-4 slider rounded-lg">
         <nz-carousel class="slider-img">
-          <div nz-carousel-content *ngFor="let item of sliderImages">
-            <img class="h-full object-contain" [src]="item.src" />
+          <div nz-carousel-content *ngFor="let item of sliderCategories">
+            <img class="h-full object-contain" [src]="item.image" />
           </div>
         </nz-carousel>
       </div>
@@ -25,21 +25,21 @@
       <h4 class="mt-2 font-semibold text-base">Chọn màu để xem giá</h4>
       <div class="mt-2 grid grid-cols-3 gap-2">
         <div
-          *ngFor="let item of sliderImages; let i = index"
+          *ngFor="let item of sliderCategories; let i = index"
           class="col-span-1 flex items-center h-12 rounded-md px-1"
           (click)="selectCategory(i)"
           [ngClass]="[
-            category === i ? 'border-selected item-selected' : 'border',
+            categorySelected?.id === item.id ? 'border-selected item-selected' : 'border',
             !item.isActive ? 'cursor-not-allowed opacity-50' : 'cursor-pointer'
           ]"
         >
           <img
-            [src]="item.src"
+            [src]="item.image"
             class="w-6 h-4 col-span-1 mt-auto mb-auto object-contain"
           />
           <div class="ml-2">
-            <div class="font-semibold text-sm">Bạc</div>
-            <p class="text-xs">16.990.000 ₫</p>
+            <div class="font-semibold text-sm">{{item.name}}</div>
+            <p class="text-xs">{{item.price | number: '1.0-2'}} ₫</p>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
         <h4 class="font-semibold text-base">Thông tin máy</h4>
         <p class="flex items-start mt-2">
           <i nz-icon nzType="mobile" nzTheme="outline" class="mr-1 mt-1"></i
-          >Mới, đầy đủ phụ kiện từ nhà sản xuất
+          >{{productDetail.status}}
         </p>
         <p class="flex items-start mt-2">
           <i nz-icon nzType="sketch" nzTheme="outline" class="mr-1 mt-1"></i>Bảo
@@ -108,7 +108,7 @@
         <div
           class="rounded-xl border shadow-lg py-2 px-4 overflow-hidden"
           [ngClass]="isDescriptionCollapsed ? 'description-collapsed' : ''"
-          [innerHTML]="htmlContent"
+          [innerHTML]="productDetail.description"
         ></div>
         <div class="absolute bottom-1 w-full flex">
           <button
@@ -144,34 +144,14 @@
         <div class="mt-4 mb-4 border rounded-xl">
           <table>
             <tbody>
-              <tr>
-                <th class="w-1/3 table-cell font-normal text-left">
-                  Kích thước màn hình
-                </th>
-                <th class="table-cell font-normal text-left">10.9 inches</th>
-              </tr>
-              <tr class="bg-gray-100">
-                <th class="w-1/3 table-cell font-normal text-left">
-                  Kích thước màn hình
-                </th>
-                <th class="table-cell font-normal text-left">10.9 inches</th>
-              </tr>
-              <tr>
-                <th class="w-1/3 table-cell font-normal text-left">
-                  Kích thước màn hình
-                </th>
-                <th class="table-cell font-normal text-left">10.9 inches</th>
-              </tr>
-              <tr class="bg-gray-100">
-                <th
-                  class="w-1/3 table-cell font-normal text-left rounded-bl-xl"
-                >
-                  Kích thước màn hình
-                </th>
-                <th class="table-cell font-normal text-left rounded-br-xl">
-                  10.9 inches
-                </th>
-              </tr>
+              <ng-container *ngFor="let item of productDetail.configuration; let even = even">
+                <tr [ngClass]="even ? '' : 'bg-gray-100'">
+                  <th class="w-1/3 table-cell font-normal text-left">
+                    {{item.key}}
+                  </th>
+                  <th class="table-cell font-normal text-left">{{item.description}}</th>
+                </tr>
+              </ng-container>
             </tbody>
           </table>
         </div>
