--- a/src/app/shared/component/product-card/product-card.component.html
+++ b/src/app/shared/component/product-card/product-card.component.html
@@ -32,6 +32,9 @@
       ><del>{{ product.originalPrice | number: "1.0-2" }} ₫</del></span
     >
   </div>
+  <div *ngIf="product.specialFeatures.length > 0">
+    <span *ngFor="let item of product.specialFeatures" nz-typography><code>{{item}}</code></span>
+  </div>
   <nz-rate
     class="text-sm"
     [(ngModel)]="product.averageRate"
@@ -47,9 +50,13 @@
         h-7
         mr-auto
         text-base text-white
-        bg-blue-700
+        bg-blue-600
         font-medium
-        rounded-sm
+        rounded-xl
+        hover:border-blue-600
+        hover:border
+        hover:text-blue-600
+        hover:bg-white
       "
       (click)="clickLeftButton(product)"
     >
@@ -62,9 +69,13 @@
         w-20
         h-7
         text-base text-white
-        bg-red-700
-        rounded-sm
+        bg-red-600
+        rounded-xl
         font-medium
+        hover:border-red-600
+        hover:border
+        hover:text-red-600
+        hover:bg-white
       "
       (click)="clickRightButton(product)"
     >
