--- a/src/app/shared/component/product-card/product-card.component.scss
+++ b/src/app/shared/component/product-card/product-card.component.scss
@@ -8,14 +8,15 @@
 }
 
 .card {
-  height: fit-content;
+  height: 371px;
   box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
-
+  transition: height 0.2s ease-in-out;
   .card-footer {
+    transition: display 0.2s linear;
     display: none;
   }
-
   &:hover {
+    height: 387px;
     .card-footer {
       display: grid;
     }
