--- a/src/app/main/modules/product-detail/product-detail.component.html
+++ b/src/app/main/modules/product-detail/product-detail.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <button class="w-full rounded-md bg-red-600 py-1 mt-4 text-white">
+      <button class="w-full rounded-md bg-red-600 py-1 mt-4 text-white" (click)="buyCategory()">
         <span class="font-bold text-base">MUA NGAY</span> <br />
         (Giao tận nơi hoặc lấy tại cửa hàng)
       </button>
