--- a/src/app/shared/component/product-card/product-card.component.scss
+++ b/src/app/shared/component/product-card/product-card.component.scss
@@ -11,9 +11,15 @@
   height: 371px;
   box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
   transition: height 0.2s ease-in-out;
+  position: relative;
   .card-footer {
     transition: display 0.2s linear;
     display: none;
+    position: absolute;
+    width: 100%;
+    bottom: 8px;
+    right: 0px;
+    padding: 0 8px
   }
   &:hover {
     height: 387px;
@@ -53,4 +59,8 @@
     text-align: center;
     color: #ffffff;
   }
+}
+
+.tag {
+  margin-bottom: 0 !important;
 }
