--- a/src/app/main/modules/cart/cart/cart.component.html
+++ b/src/app/main/modules/cart/cart/cart.component.html
@@ -37,14 +37,14 @@
         <td colspan="3">Nhập mã khuyến mãi:</td>
         <td colspan="2" class="p-1">
           <div class="flex items-center justify-center">
-            <input class="w-32" type="text" nz-input />
-            <button nz-button nzDanger nzType="primary">Áp dụng</button>
+            <input class="w-32" [(ngModel)]="saleCode" type="text" nz-input />
+            <button nz-button nzDanger nzType="primary" (click)="getSaleCode()">Áp dụng</button>
           </div>
         </td>
       </tr>
       <tr class="h-12 text-base">
         <td colspan="3">Giảm giá:</td>
-        <td colspan="2">0 ₫</td>
+        <td colspan="2">{{salePrice | number: '1.0-2'}} ₫</td>
       </tr>
       <tr class="h-12 text-base font-bold text-red-700">
         <td colspan="3">Tổng tiền:</td>
@@ -53,32 +53,31 @@
     </tbody>
   </table>
   <h2 class="text-xl font-bold mt-4 flex justify-center">Thông tin mua hàng</h2>
-  <form class="mt-4 w-1/2 ml-auto mr-auto" nz-form nz-row>
+  <form class="mt-4 w-1/2 ml-auto mr-auto" [formGroup]="formInfo" nz-form nz-row>
     <nz-form-item nz-col nzSpan="12">
       <nz-form-label nzRequired>Họ và tên</nz-form-label>
-      <nz-form-control>
-        <input type="text" nz-input />
+      <nz-form-control nzErrorTip="Vui lòng điền họ tên">
+        <input type="text" formControlName="name" nz-input />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item nz-col nzSpan="12">
       <nz-form-label nzRequired>Số điện thoại đặt hàng</nz-form-label>
-      <nz-form-control>
-        <input type="text" nz-input />
+      <nz-form-control nzErrorTip="Vui lòng điền số điện thoại">
+        <input type="tel" formControlName="tel" nz-input />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item nz-col nzSpan="12">
       <nz-form-label nzRequired>Email</nz-form-label>
-      <nz-form-control>
-        <input type="text" nz-input />
+      <nz-form-control nzErrorTip="Vui lòng điền email">
+        <input type="email" formControlName="email" nz-input />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item nz-col nzSpan="12">
       <nz-form-label nzRequired>Thành phố</nz-form-label>
-      <nz-form-control>
-        <nz-select
-          [(ngModel)]="provinceSelected"
-          (ngModelChange)="provinceChange($event)"
-          [ngModelOptions]="{ standalone: true }"
+      <nz-form-control nzErrorTip="Vui lòng chọn thành phố">
+        <nz-select formControlName="province"
+        (ngModelChange)="provinceChange($event)"
+        (nzOpenChange)="openProvinceSelect($event)"
         >
           <nz-option
             *ngFor="let item of provinceList"
@@ -90,8 +89,8 @@
     </nz-form-item>
     <nz-form-item nz-col nzSpan="12">
       <nz-form-label nzRequired>Quận/huyện</nz-form-label>
-      <nz-form-control>
-        <nz-select ngModel="lucy">
+      <nz-form-control nzErrorTip="Vui lòng chọn quận huyện">
+        <nz-select formControlName="district">
           <nz-option
             *ngFor="let item of districtList"
             [nzValue]="item.code"
@@ -102,14 +101,14 @@
     </nz-form-item>
     <nz-form-item nz-col nzSpan="12">
       <nz-form-label nzRequired>Địa chỉ</nz-form-label>
-      <nz-form-control>
-        <input type="text" nz-input />
+      <nz-form-control nzErrorTip="Vui lòng nhập địa chỉ">
+        <input type="text" nz-input formControlName="address" />
       </nz-form-control>
     </nz-form-item>
     <nz-form-item nz-col nzSpan="24">
-      <nz-form-label nzRequired>Lưu ý của quý khách</nz-form-label>
+      <nz-form-label>Lưu ý của quý khách</nz-form-label>
       <nz-form-control>
-        <input type="text" nz-input />
+        <input type="text" formControlName="note" nz-input />
       </nz-form-control>
     </nz-form-item>
   </form>
@@ -131,6 +130,7 @@
       w-1/2
     "
     nz-button
+    (click)="paymentByCash()"
   >
     ĐẶT HÀNG TRƯỚC THANH TOÁN SAU
   </button>
@@ -138,7 +138,7 @@
     <nz-divider nzText=" HOẶC CHỌN THANH TOÁN ONLINE"></nz-divider>
   </div>
   <div class="ml-auto mr-auto w-1/2">
-    <nz-radio-group class="space-y-4">
+    <nz-radio-group [(ngModel)]="paymentGate" class="space-y-4">
       <label nz-radio nzValue="A">
         <i class="vnpay-logo mr-2"></i>
         Thanh toán qua VNPAY
@@ -173,11 +173,12 @@
       h-12
     "
     nz-button
+    (click)="paymentByBank()"
   >
     THANH TOÁN ONLINE
   </button>
   <div class="mt-4 flex justify-center mb-4">
-    <label nzChecked nz-checkbox></label
+    <label [(ngModel)]="isAcceptTermRule" nz-checkbox></label
     ><span class="text-sm italic ml-2"
       >Bằng cách đặt hàng, bạn đồng ý với
       <a
