--- a/src/app/main/modules/product-detail/product-detail.component.html
+++ b/src/app/main/modules/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 <div class="my-2" *ngIf="productDetail$ | async as productDetail">
   <div class="mb-2 flex items-center">
     <h2 class="text-xl font-semibold">
-      {{productDetail.name}}
+      {{ productDetail.name }}
     </h2>
     <span class="ml-3 mb-1"><nz-rate disabled [ngModel]="5"></nz-rate></span>
     <span class="ml-3 text-sm">12 đánh giá</span>
@@ -21,7 +21,9 @@
       />
     </div>
     <div class="col-span-1">
-      <h5 class="font-semibold text-lg text-red-600">16.990.000 ₫</h5>
+      <h5 class="font-semibold text-lg text-red-600">
+        {{ categorySelected.price | number: "1.0-2" }} ₫
+      </h5>
       <h4 class="mt-2 font-semibold text-base">Chọn màu để xem giá</h4>
       <div class="mt-2 grid grid-cols-3 gap-2">
         <div
@@ -29,7 +31,9 @@
           class="col-span-1 flex items-center h-12 rounded-md px-1"
           (click)="selectCategory(i)"
           [ngClass]="[
-            categorySelected?.id === item.id ? 'border-selected item-selected' : 'border',
+            categorySelected?.id === item.id
+              ? 'border-selected item-selected'
+              : 'border',
             !item.isActive ? 'cursor-not-allowed opacity-50' : 'cursor-pointer'
           ]"
         >
@@ -38,12 +42,15 @@
             class="w-6 h-4 col-span-1 mt-auto mb-auto object-contain"
           />
           <div class="ml-2">
-            <div class="font-semibold text-sm">{{item.name}}</div>
-            <p class="text-xs">{{item.price | number: '1.0-2'}} ₫</p>
+            <div class="font-semibold text-sm">{{ item.name }}</div>
+            <p class="text-xs">{{ item.price | number: "1.0-2" }} ₫</p>
           </div>
         </div>
       </div>
-      <button class="w-full rounded-md bg-red-600 py-1 mt-4 text-white" (click)="buyCategory()">
+      <button
+        class="w-full rounded-md bg-red-600 py-1 mt-4 text-white"
+        (click)="buyCategory()"
+      >
         <span class="font-bold text-base">MUA NGAY</span> <br />
         (Giao tận nơi hoặc lấy tại cửa hàng)
       </button>
@@ -91,7 +98,7 @@
         <h4 class="font-semibold text-base">Thông tin máy</h4>
         <p class="flex items-start mt-2">
           <i nz-icon nzType="mobile" nzTheme="outline" class="mr-1 mt-1"></i
-          >{{productDetail.status}}
+          >{{ productDetail.status }}
         </p>
         <p class="flex items-start mt-2">
           <i nz-icon nzType="sketch" nzTheme="outline" class="mr-1 mt-1"></i>Bảo
@@ -144,12 +151,19 @@
         <div class="mt-4 mb-4 border rounded-xl">
           <table>
             <tbody>
-              <ng-container *ngFor="let item of productDetail.configuration; let even = even">
+              <ng-container
+                *ngFor="
+                  let item of productDetail.configuration;
+                  let even = even
+                "
+              >
                 <tr [ngClass]="even ? '' : 'bg-gray-100'">
                   <th class="w-1/3 table-cell font-normal text-left">
-                    {{item.key}}
+                    {{ item.key }}
                   </th>
-                  <th class="table-cell font-normal text-left">{{item.description}}</th>
+                  <th class="table-cell font-normal text-left">
+                    {{ item.description }}
+                  </th>
                 </tr>
               </ng-container>
             </tbody>
