--- a/src/app/main/modules/order-tracking/components/order-tracking-timeline/order-tracking-timeline.component.html
+++ b/src/app/main/modules/order-tracking/components/order-tracking-timeline/order-tracking-timeline.component.html
@@ -32,5 +32,5 @@
       </div>
     </div>
   </div>
-  <button class="mt-4 p-2 w-64 bg-red-600 text-white rounded-md" routerLink="../">Chi tiết đơn hàng</button>
+  <button class="mt-4 p-2 w-64 bg-red-600 text-white rounded-md" (click)="goToOrderDetail()">Chi tiết đơn hàng</button>
 </div>
